Version 0.24 (October 2012)
    * Update allowed DesktopEntry categories following changes to the
      specification.
    * Fix removal of empty submenu, freedesktop bug #54747.
    * Documentation is now available on RTD: http://pyxdg.readthedocs.org/
    * A few more tests, and some code cleanup.

Version 0.23 (July 2012)
    * Fix a test for non-UTF-8 locales.

Version 0.22 (July 2012)
    * Better unicode handling in several modules.
    * Fix for sorting non-ASCII menu entries, freedesktop bug #52492.
    * More tests.

Version 0.21 (July 2012)
    * Tests can now be run conveniently using nosetests, and cover more of the
      code.
    * BaseDirectory: New save_cache_path() function, freedesktop bug #26458.
    * Config: Default icon theme is 'hicolor', not 'highcolor'.
    * Menu: Obsolete Rule.compile() method removed.
    * DesktopEntry: Corrected spelling of checkCategories() method, freedesktop
      bug #24974.
    * DesktopEntry: Consider Actions and Keywords keys standard.
    * DesktopEntry: Accept non-ASCII Keywords.
    * DesktopEntry: Update list of environments valid for OnlyShowIn.
    * Mime: Fix get_type_by_contents() in Python 3.
    * RecentFiles: Minor bug fixes.

Version 0.20 (June 2012)
    * Compatible with Python 3; requires Python 2.6 or later
    * Clean up accidental GPL license notice in Menu.py
    * Add test scripts for xdg.Mime, xdg.Locale and xdg.RecentFiles
    * Fixes for icon theme validation
    * Fix exception in xdg.Mime
    * Replace invalid string exceptions
    * Fall back to default base directories if $XDG* environment variables are
      set but empty.
    * Remove use of deprecated os.popen3 in Menu.py
    * Correct URLs in README

Version 0.19
    * IniFile.py: add support for trusted desktop files (thanks to karl mikaelsson)
    * DesktopEntry.py: Support spec version 1.0, Debian bug #563660
    * MimeType.py: Fix parsing of in memory data, Debian bug #563718